# MagicBackgroundRemover

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  bot.py  config.py  docker-compose.yml  pyproject.toml  railway.json  railway.toml  railway_start.sh  render.yaml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260626_0001_initial.py
api/: server.py
core/: exceptions.py  logger.py  middleware.py  security.py  settings.py
database/: engine.py  models.py
database/repositories/: image_repo.py  payment_repo.py  user_repo.py
handlers/: admin.py  image.py  photo.py  premium.py  profile.py  referral.py  start.py
keyboards/: inline.py  reply.py
localization/: __init__.py  translations.py
scripts/: migrate.sh  seed.py
services/: cache.py  image_processor.py  notification.py  payment.py  storage.py
src/: __init__.py  constants.py  exceptions.py  main.py
src/api/: app.py
src/api/routers/: __init__.py  admin.py  public.py  telegram.py  webhooks.py
src/bot/: __init__.py  dispatcher.py  states.py
src/bot/keyboards/: __init__.py  inline.py  reply.py
src/bot/middlewares/: __init__.py  analytics.py  ban.py  database.py  db.py  i18n.py  throttling.py  user.py
src/config/: logging.py  settings.py
src/database/: __init__.py  backup.py  migrations.py  models.py  repositories.py  session.py
src/services/: __init__.py  cache.py  rate_limiter.py  storage.py
tests/: conftest.py  test_ai.py
utils/: __init__.py  bg_remove.py  checker.py  helpers.py  logger.py  validators.py
(+60 files in other folders)
