[project]
name = "magic-background-remover"
version = "2.0.0"
description = "Professional SaaS Telegram bot for AI-powered image processing"
requires-python = ">=3.11"
authors = [{ name = "KRYZENSYS" }]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 110

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"