[tool.poetry]
name = "magic-background-remover"
version = "2.0.0"
description = "Enterprise SAAS Telegram AI platform"
authors = ["KRYZENSYS"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true